fix: update machine list pagination spacing (#4873)
* update machine list pagination spacing

* remove redundant .machine-list__divider class

--- a/src/app/machines/views/MachineList/_index.scss
+++ b/src/app/machines/views/MachineList/_index.scss
@@ -111,10 +111,6 @@
     justify-content: flex-end;
   }
 
-  .machine-list__divider {
-    margin-top: $spv--x-large;
-  }
-
   .p-tooltip__message .p-list::after {
     white-space: normal;
   }
